# windows-graphics-capture

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  QUICK_REFERENCE.md  README.md  main.cpp  pch.h
examples/csharp/: INTEGRATION_EXAMPLES.md  Program.cs  ScreenCapture.cs  ScreenCaptureExample.csproj
src/console/: main.cpp
src/core/: ScreenCaptureCore.cpp  ScreenCaptureCore.h
src/dll/: ScreenCaptureDLL.cpp  ScreenCaptureDLL.def  ScreenCaptureDLL.h
